...
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:elevation="0dp">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:background="@color/bg_color"
            android:padding="0dp"
            app:contentInsetEnd="0dp"
            app:contentInsetStart="0dp">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <io.armcha.ribble.presentation.widget.ArcView
                    android:id="@+id/arcView"
                    android:layout_width="85dp"
                    android:layout_height="63dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="4dp"
                    android:background="@android:color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
...
