<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.screen.shot.ShotFragment">

    <io.armcha.ribble.presentation.widget.GridRecyclerView
        android:id="@+id/shotRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbarStyle="outsideOverlay"
        android:scrollbars="vertical"
        android:scrollbarThumbVertical="@drawable/scrollbar"
        android:layoutAnimation="@anim/grid_layout_animation_from_bottom" />

    <io.armcha.ribble.presentation.widget.AnimatedTextView
        android:id="@+id/noShotsText"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <include layout="@layout/progress_bar" />

</android.support.constraint.ConstraintLayout>
