<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    tools:context=".presentation.screen.shot.ShotFragment">

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg_color"
        android:scrollbarStyle="outsideOverlay"
        android:scrollbars="vertical"
        android:scrollbarThumbVertical="@drawable/scrollbar"
        android:id="@+id/likesRecyclerView"/>

    <io.armcha.ribble.presentation.widget.AnimatedTextView
        android:id="@+id/noShotsText"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <include layout="@layout/progress_bar"/>

</android.support.constraint.ConstraintLayout>
